@@ -278,6 +278,12 @@ JNIEXPORT jboolean JNICALL
 }
 
 JNIEXPORT jboolean JNICALL
+        Java_normal_engine_implementation_jni_triangulation_NJNITriangulation_hasVerticalSurface
+        (JNIEnv *env, jobject me) {
+    return GET_ENGINE_OBJECT(env, NTriangulation, me)->hasVerticalSurface();
+}
+
+JNIEXPORT jboolean JNICALL
         Java_normal_engine_implementation_jni_triangulation_NJNITriangulation_idealToFinite
         (JNIEnv *env, jobject me, jboolean force) {
     return GET_ENGINE_OBJECT(env, NTriangulation, me)->idealToFinite(force);
@@ -352,6 +358,12 @@ JNIEXPORT jboolean JNICALL
         Java_normal_engine_implementation_jni_triangulation_NJNITriangulation_isValid
         (JNIEnv *env, jobject me) {
     return GET_ENGINE_OBJECT(env, NTriangulation, me)->isValid();
+}
+
+JNIEXPORT jboolean JNICALL
+        Java_normal_engine_implementation_jni_triangulation_NJNITriangulation_isZeroEfficient
+        (JNIEnv *env, jobject me) {
+    return GET_ENGINE_OBJECT(env, NTriangulation, me)->isZeroEfficient();
 }
 
 JNIEXPORT void JNICALL
