@@ -92,6 +92,9 @@ public class NJNITriangulation extends NJNIPacket
     public native boolean isConnected();
     public native boolean hasBoundaryFaces();
 
+    public native boolean isZeroEfficient();
+    public native boolean hasVerticalSurface();
+
     public native boolean crushMaximalForest();
     public native boolean intelligentSimplify();
     public boolean simplifyToLocalMinimum() {
